# rustix-dlmalloc

./: Cargo.toml  README.md
.github/workflows/: main.yml
fuzz/: Cargo.toml
fuzz/src/: lib.rs
src/: dlmalloc.rs  global.rs  lib.rs  unix.rs
tests/: global.rs  smoke.rs
