[package]
name = "rustix-dlmalloc"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/dlmalloc-rs"
homepage = "https://github.com/alexcrichton/dlmalloc-rs"
documentation = "https://docs.rs/dlmalloc"
description = """
A Rust port of the dlmalloc allocator, ported to rustix
"""
edition = "2021"

[package.metadata.docs.rs]
features = ['global']

[lib]
doctest = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
rustix = { version = "0.38.8", default-features = false, features = ["mm"] }
rustix-futex-sync = "0.2.1"

[dependencies]
# For more information on these dependencies see rust-lang/rust's
# `src/tools/rustc-std-workspace` folder
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[dev-dependencies]
rand = "0.3"

[profile.release]
debug-assertions = true

[features]
# Enable implementations of the `GlobalAlloc` standard library API, exporting a
# new `GlobalDlmalloc` as well which implements this trait.
global = []

# Enable very expensive debug checks in this crate
debug = []

rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']
